# genb

./: .gitignore  README.md  pyproject.toml  setup.py
src/genbot/: BatchedModel.py  Genbot.py  JobContext.py  JobWindow.py  Permissions.py  PromptPipeline.py  TimedPresence.py  __init__.py  attention.py  base_unit_manager.py  batch_worker.py  context.py  feed_queue.py  gatekeep.py  genbot.py  idlist.py  job.py  job_manager.py  model.py  model_manager.py  permission_manager.py  pipeline.py  response_handler.py  stream.py
